--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <img class="big-img" src="assets/img.png">
   </div>
 
-  <!-- <script src="collect.js"></script> -->
+  <script src="collect.js"></script>
   <script src="stats.js"></script>
 </body>
 </html>
